--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,3 +19,14 @@
 </div>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+
+
+<!-- Search functuion -->
+<form action="/search">
+  <div class="tipue_search_left">
+    <img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
+  </div>
+  <div class="tipue_search_right">
+    <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required></div>
+  <div style="clear: both;"></div>
+</form>
